# Project-YoRHa

./: main.py  pyproject.toml
src/yorha/: config.py  main.py
src/yorha/api/: app.py  models.py  search_app.py
src/yorha/api/routers/: config.py  health.py  search.py  tools.py
src/yorha/core/: container.py  manifest.py  module.py  registry.py  tool.py
src/yorha/kernel/: module_manager.py  runtime.py
src/yorha/models/: execution_result.py
src/yorha/modules/web_search/: models.py  module.py  tool.py
src/yorha/providers/search/: base.py  duckduckgo.py
src/yorha/services/: logging.py
